# mlops4k8

./: README.md
diabetes_regressor/: setup.cfg
diabetes_regressor/model/: model.joblib
diabetes_regressor/src/: build_model.py
iris_classifier/: setup.cfg
iris_classifier/model/: model.joblib
iris_classifier/src/: build_model.py
model_api/: main.py
