[metadata]
name = iris-classifier
version = 1.0.0
description = iris classifier POC
long_description = file: README.md
author_email = ""
author = Bikash SHaw
license = LICENSE.txt
classifiers = 
    Programming Language :: Python :: 3
    Intended Audience :: Public

[options]
packages = find:
install_requires =
    pandas==1.3.5
    numpy==1.21.5
    scikit-learn==1.0.2
    pydantic==1.9.1
    joblib==1.1.0
python_requires = >=3.7


[options.packages.find]
include = src, src.*
exclude = tests

[options.entry_points]
console_scripts = 
    build-model = src.build_model:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-cov


